--- a/src/i18n/languages/en.json
+++ b/src/i18n/languages/en.json
@@ -14,6 +14,7 @@
         "signup.confirmPassword": "Confirm password",
         "signup.register" :"REGISTER",
         "signup.checkboxTermsText": "I accept terms & conditions and privacy policy",
-        "signup.loginLinkText" : "Already have an account ?"
+        "signup.loginLinkText" : "Already have an account ?",
+        "signup.loginTextLink" : "Login "
         
 }
