--- a/src/i18n/languages/en.json
+++ b/src/i18n/languages/en.json
@@ -16,6 +16,10 @@
         "signup.checkboxTermsText": "I accept terms & conditions and privacy policy",
         "signup.loginLinkText" : "Already have an account ?",
 
+        "reset.pageHeader" : "Password reset",
+        "reset.pageSubHeader" : "Enter your registered mobile number and an OTP will be reset your password",
+        "reset.continue" : "CONTINUE",
+        
         "otp.pageHeader" : "Verification code",
         "otp.pageSubHeader" : "Please type the verification code sent to +91 8892050268",
         "otp.resendText"     : "Didn't receive OTP.",
