Added components for home page icons

--- a/src/i18n/languages/en.json
+++ b/src/i18n/languages/en.json
@@ -1,42 +1,72 @@
+{
+  "common.header": "ROYALITY WALLET",
+  "login.siginPageLabel": "Royality Wallet",
+  "login.emailLabel": "Mobile number/Email id",
+  "login.passwordLabel": "Password",
+  "login.signInLabel": "LOGIN",
+  "login.welcomeText": "Welcome to",
+  "login.linkText": "Forgot Passwod ?",
 
-{       
-        "common.header" : "ROYALITY WALLET",
-        "login.siginPageLabel" : "Royality Wallet",
-        "login.emailLabel" : "Mobile number/Email id",
-        "login.passwordLabel": "Password",
-        "login.signInLabel" : "LOGIN",
-        "login.welcomeText" : "Welcome to",
-        "login.linkText": "Forgot Passwod ?" ,
-        
-        "signup.fullName" : "Full name",
-        "signup.gender" : "Gender",
-        "signup.mobileNo" : "Mobile no",
-        "signup.passwordLabel" : "Password",
-        "signup.confirmPassword": "Confirm password",
-        "signup.register" :"REGISTER",
-        "signup.checkboxTermsText": "I accept terms & conditions and privacy policy",
-        "signup.loginLinkText" : "Already have an account ?",
-        "signup.loginTextLink" : "Login",
+  "signup.fullName": "Full name",
+  "signup.gender": "Gender",
+  "signup.mobileNo": "Mobile no",
+  "signup.passwordLabel": "Password",
+  "signup.confirmPassword": "Confirm password",
+  "signup.register": "REGISTER",
+  "signup.checkboxTermsText": "I accept terms & conditions and privacy policy",
+  "signup.loginLinkText": "Already have an account ?",
+  "signup.loginTextLink": "Login",
 
-        "reset.pageHeader" : "Password reset",
-        "reset.pageSubHeader" : "Enter your registered mobile number and an OTP will be reset your password",
-        "reset.continue" : "CONTINUE",
-        
-        "otp.pageHeader" : "Verification code",
-        "otp.pageSubHeader" : "Please type the verification code sent to +91 8892050268",
-        "otp.resendText"     : "Didn't receive OTP.",
-        "otp.resendLinkText"     : "Resend OTP",
-        "otp.verify"            : " VERIFY"    ,
-        
-        "mpin.mpinField" : "New MPIN",
-        "mpin.confirmMpin" : "Confirm MPIN",
-        "mpin.pageHeader" : "Create MPIN",
-        "mpin.subHeader" : "MPIN allows you hassle free login even if you forgot password",
-        "mpin.done" : "DONE",
+  "reset.pageHeader": "Password reset",
+  "reset.pageSubHeader": "Enter your registered mobile number and an OTP will be reset your password",
+  "reset.continue": "CONTINUE",
 
-        "account.fixedPageHeader" : "Fixed Account - {accountNo}",
-        "account.depositeAmount" : "Amount of deposite",
-        "account.investmentPeriod" : "Investment period",
-        "account.openAccount"   : "OPEN ACCOUNT"
-        
+  "otp.pageHeader": "Verification code",
+  "otp.pageSubHeader": "Please type the verification code sent to +91 8892050268",
+  "otp.resendText": "Didn't receive OTP.",
+  "otp.resendLinkText": "Resend OTP",
+  "otp.verify": " VERIFY",
+
+  "mpin.mpinField": "New MPIN",
+  "mpin.confirmMpin": "Confirm MPIN",
+  "mpin.pageHeader": "Create MPIN",
+  "mpin.subHeader": "MPIN allows you hassle free login even if you forgot password",
+  "mpin.done": "DONE",
+
+  "account.fixedPageHeader": "Fixed Account - {accountNo}",
+  "account.depositeAmount": "Amount of deposite",
+  "account.investmentPeriod": "Investment period",
+  "account.openAccount": "OPEN ACCOUNT",
+
+  "home.mobileIconText": "Mobile",
+  "home.laptopIconText" : "Laptop",
+  "home.shopping" : "Shopping",
+  "home.utility" : "Utility",
+  "home.fashionIconText" : "Fashion",
+  "home.televisionText" : "Tv Apps",
+  "home.loanText" : "Loans",
+  "home.businessLoan" : "Business loan",
+  "home.puchaseLoan" : "Hire-purchase loan",
+  "home.termLoan" : "Term loan",
+  "home.personalLoanText" : "Personal loan",
+  "home.storeText" : "Electronics store",
+  "home.sparePartText" : "Spare parts",
+  "home.motorbike" : "Bikes & auto",
+  "home.grocery" : "Groceries",
+  "home.walletText" : "Wallet & belts",
+  "home.watchText" : "Watches",
+  "home.shoesText" : "Shoes",
+  "home.educationTedxt" : "Educational loan",
+  "home.secureText" : "Secured loan",
+  "home.flightText" : "Flight booking",
+  "home.busText" : "Bus booking",
+  "home.topupText" : "Top up & Recharge",
+  "home.electricityAndWaterText" : "Electricity & Water",
+  "home.televisionPayment" : "TV Payment",
+  "home.wifiPayment" : "WIFI Payment",
+  "home.creditcard" : "Credit card payment",
+  "home.insurance" : "Insurance/Finance/EMI",
+  "home.antivirus" : "Antivirus",
+  "home.seeAll" : "See all",
+  "home.collapse" : "Collapse all"
 }
