--- a/src/i18n/languages/en.json
+++ b/src/i18n/languages/en.json
@@ -95,12 +95,22 @@
   "account.labelmore": "Know more about each account",
 
   "account.fixedPageHeader": "Fixed Account - {accountNo}",
+  "account.savingDeposit": "Deposit",
+  "account.investmentPeriodDaily": "Investment period(Daily)",
+  "account.investmentPeriodMonthly": "Investment period(Monthly)",
+  "account.minimumAccountBalance": "Minimum account balance",
+  "account.currentWithdrawlimit":"Cash withdraw limit",
+  "account.currentUnlimited":"Unlimited withdrawal",
+
+  "account.savingPageHeader": "Saving Account - {accountNo}",
   "account.depositeAmount": "Amount of deposit",
   "account.investmentPeriod": "Investment period",
   "account.openAccount": "OPEN ACCOUNT",
   "account.successText": "SUCCESS",
   "account.accountNoText": "Account created :",
   "account.continue": "CONTINUE",
+
+
 
   "fund.fundpage": "FUND TRANSFER",
   "fund.bankTrasfer": "BANK TRANSFER",
