RW-56 Transactional History Page

--- a/src/i18n/languages/en.json
+++ b/src/i18n/languages/en.json
@@ -134,5 +134,9 @@
   "agent.mob": "Mobile number",
   "agent.amount": "Amount",
   "agent.remark": "Remarks/purpose",
-  "agent.conform": "CONFIRM"
+  "agent.conform": "CONFIRM",
+
+  "TransactionHistory.text":"Transaction History",
+  "TransactionHistory.payment":"Payment to ",
+  "TransactionHistory.Receivedfrom":"Received from"
 }
