--- a/src/i18n/languages/en.json
+++ b/src/i18n/languages/en.json
@@ -76,8 +76,8 @@
   "account.fullName": "Full name",
   "account.fatherName": "Father name",
   "account.motherName": "Mother name",
-  "account.dateofBirth": "Date of Birth",
-  "account.bsad": "BS/AD",
+  "account.dateofBirth": "Date of Birth(A.D)",
+  "account.dateofBirth1": "Date of Birth(B.S)",
   "account.gender": "Gender",
   "account.currentAddress": "Current Address",
   "account.permanentAddress": "Permanent Address",
