--- a/src/i18n/languages/en.json
+++ b/src/i18n/languages/en.json
@@ -202,7 +202,8 @@
   "UtilityClass":"Class",
   "UtilityBookFlight":"Book Flight",
 
-  
+  "UtilityBusBooking":"Bus booking",
+  "UtilityBus":"Book Bus",  
   
   "UtilityElectricityWater":"Electricity & Water",
   "UtilityNepalElectricityAuthority":"Nepal electricity authority",
