--- a/src/i18n/languages/en.json
+++ b/src/i18n/languages/en.json
@@ -99,8 +99,8 @@
   "account.investmentPeriodDaily": "Investment period(Daily)",
   "account.investmentPeriodMonthly": "Investment period(Monthly)",
   "account.minimumAccountBalance": "Minimum account balance",
-  "account.currentWithdrawlimit":"Cash withdraw limit",
-  "account.currentUnlimited":"Unlimited withdrawal",
+  "account.currentWithdrawlimit": "Cash withdraw limit",
+  "account.currentUnlimited": "Unlimited withdrawal",
 
   "account.savingPageHeader": "Saving Account - {accountNo}",
   "account.depositeAmount": "Amount of deposit",
@@ -109,8 +109,6 @@
   "account.successText": "SUCCESS",
   "account.accountNoText": "Account created :",
   "account.continue": "CONTINUE",
-
-
 
   "fund.fundpage": "FUND TRANSFER",
   "fund.bankTrasfer": "BANK TRANSFER",
@@ -146,105 +144,103 @@
   "agent.remark": "Remarks/purpose",
   "agent.conform": "CONFIRM",
 
-  "profile.text":"Profile",
-  "profile.fullName":"Full name",
-  "profile.accountNumber":"Account number",
-  "profile.accountType":"Account type",
-  "profile.accountCurrency":"Account curency",
-  "profile.accountInterest":"Account interest",
-  "profile.changeLanguage":"Change language",
-  "profile.changeMPIN":"Change MPIN",
-  "profile.changePassword":"Change Password",
-  "profile.logout":"Logout",
-  "profile.privacy":"Privacy",
-  "profile.Version":"Version",
-  
-  "NotificationPage.text":"Notifications",
-  "NotificationPage.today":"Today",
-  "NotificationPage.yesterday":"Yesterday",
-  "NotificationPage.ThisWeek":"This Week",
-  "NotificationPage.date":"Date",
-  "NotificationPage.time":"Time",
+  "profile.text": "Profile",
+  "profile.fullName": "Full name",
+  "profile.accountNumber": "Account number",
+  "profile.accountType": "Account type",
+  "profile.accountCurrency": "Account curency",
+  "profile.accountInterest": "Account interest",
+  "profile.changeLanguage": "Change language",
+  "profile.changeMPIN": "Change MPIN",
+  "profile.changePassword": "Change Password",
+  "profile.logout": "Logout",
+  "profile.privacy": "Privacy",
+  "profile.version": "Version",
 
+  "NotificationPage.text": "Notifications",
+  "NotificationPage.today": "Today",
+  "NotificationPage.yesterday": "Yesterday",
+  "NotificationPage.ThisWeek": "This Week",
+  "NotificationPage.date": "Date",
+  "NotificationPage.time": "Time",
 
-  "TransactionHistory.text":"Transaction History",
-  "TransactionHistory.payment":"Payment to ",
-  "TransactionHistory.Receivedfrom":"Received from",
+  "TransactionHistory.text": "Transaction History",
+  "TransactionHistory.payment": "Payment to ",
+  "TransactionHistory.Receivedfrom": "Received from",
 
+  "LoanApplyPage": "Fill up your details",
+  "LoanFullName": "Full name",
+  "LoanFatherName": "Father name",
+  "LoanMobileNumber": "Mobile number",
+  "PurposeLoan": "Purpose of loan ",
+  "ApplyPageDiscard": "Dicard",
+  "ApplyPageApply": "Apply",
 
-  "LoanApplyPage":"Fill up your details",
-  "LoanFullName":"Full name",
-  "LoanFatherName":"Father name",
-  "LoanMobileNumber":"Mobile number",
-  "PurposeLoan":"Purpose of loan ",
-  "ApplyPageDiscard":"Dicard",
-  "ApplyPageApply":"Apply",
+  "emiCalculator": "EMI Calculator",
+  "emiloanAmount": "Loan amount",
+  "emiInterestRate": "Interest rate",
+  "emiLoanTenure": "Loan tenure",
+  "emiRest": "Reset",
+  "emiCalculate": "Calculate",
+  "emiPrinivipalAmount": "Prinicipal amount",
+  "emiInterest": "Interest",
+  "emiTotal": "Total payable = Principal + Interest",
+  "emiAmountMonthely": "EMI amount(Monthly instalment)",
 
-  "emiCalculator":"EMI Calculator",
-  "emiloanAmount":"Loan amount",
-  "emiInterestRate":"Interest rate",
-  "emiLoanTenure":"Loan tenure",
-  "emiRest":"Reset",
-  "emiCalculate":"Calculate",
-  "emiPrinivipalAmount":"Prinicipal amount",
-  "emiInterest":"Interest",
-  "emiTotal":"Total payable = Principal + Interest",
-  "emiAmountMonthely":"EMI amount(Monthly instalment)",
+  "UtilityFlightBooking": "Flight booking",
+  "UtilityFlightFrom": "From",
+  "UtilityFlightTo": "To",
+  "UtilityDeparture": "Departure",
+  "UtilityReturn": "Return",
+  "UtilityTravellers": "Travellers",
+  "UtilityClass": "Class",
+  "UtilityBookFlight": "Book Flight",
 
+  "UtilityBusBooking": "Bus booking",
+  "UtilityBus": "Book Bus",
 
+  "UtilityElectricityWater": "Electricity & Water",
+  "UtilityNepalElectricityAuthority": "Nepal electricity authority",
+  "UtilityKhanepani": "Khanepani",
 
-  "UtilityFlightBooking":"Flight booking",
-  "UtilityFlightFrom":"From",
-  "UtilityFlightTo":"To",
-  "UtilityDeparture":"Departure",
-  "UtilityReturn":"Return",
-  "UtilityTravellers":"Travellers",
-  "UtilityClass":"Class",
-  "UtilityBookFlight":"Book Flight",
+  "UtilityNepalNEACounter": "NEA Counter",
+  "UtilitySCnumber": "SC number",
+  "UtilityCustomerId": "Customer ID",
 
-  "UtilityBusBooking":"Bus booking",
-  "UtilityBus":"Book Bus",  
-  
-  "UtilityElectricityWater":"Electricity & Water",
-  "UtilityNepalElectricityAuthority":"Nepal electricity authority",
-  "UtilityKhanepani":"Khanepani",
+  "UtilityKhanepaniName": "Name of the place",
+  "UtilityCustomerIdKhanepani": "Customer ID",
 
-  "UtilityNepalNEACounter":"NEA Counter",
-  "UtilitySCnumber":"SC number",
-  "UtilityCustomerId":"Customer ID",
+  "UtilityDiscard": "Discard",
+  "UtilitySubmit": "Submit",
 
-  "UtilityKhanepaniName":"Name of the place",
-  "UtilityCustomerIdKhanepani":"Customer ID",
+  "UtilityInternetPayment": "Credit card Payment",
+  "UtilityBankName": "Bank name",
+  "UtilityCardNumber": "Card number",
+  "UtilityAmountPayment": "Amount",
+  "UtilityCardClear": "Clear",
+  "UtilityConfirm": "Confirm",
 
-  "UtilityDiscard":"Discard",
-  "UtilitySubmit":"Submit",
+  "InsuranceFinanceEmi": "Insurance/Finance/EMI",
+  "RoyalitySaving": "Royality saving and credit co-operative Ltd.",
+  "RoyaliFinancialServices": "Royality financial services and investment Pvt.Ltd.",
 
-  "UtilityInternetPayment":"Credit card Payment",
-  "UtilityBankName":"Bank name",
-  "UtilityCardNumber":"Card number",
-  "UtilityAmountPayment":"Amount" ,
-  "UtilityCardClear":"Clear",
-  "UtilityConfirm":"Confirm",
+  "membershipAccountnumber": "Membership/Account number",
+  "MemberName": "Member name",
+  "MobileNumber": "Mobile number",
+  "SelectTransactionType": "Select transaction type",
+  "SavingAmount": "Saving amount",
+  "Remarks": "Remark",
+  "ClearSaving": "clear",
+  "ConfirmSaving": "confirm",
 
+  "AntivirusPaymentOption": " Payment option",
+  "AntivirusSelectBank": "Select bank account",
+  "AntivirusOrderDetails": "Order details",
+  "Antiviruskaspersky": "Kaspersky antivirus 1 PC/1 user",
+  "AntivirusContiue": "Continue",
 
-  "InsuranceFinanceEmi":"Insurance/Finance/EMI",
-  "RoyalitySaving":"Royality saving and credit co-operative Ltd.",
-  "RoyaliFinancialServices":"Royality financial services and investment Pvt.Ltd.",
-
-  "membershipAccountnumber":"Membership/Account number",
-  "MemberName":"Member name",
-  "MobileNumber":"Mobile number",
-  "SelectTransactionType":"Select transaction type",
-  "SavingAmount":"Saving amount",
-  "Remarks":"Remark",
-  "ClearSaving":"clear",
-  "ConfirmSaving":"confirm",
-
-  "AntivirusPaymentOption":" Payment option",
-  "AntivirusSelectBank":"Select bank account",
-  "AntivirusOrderDetails":"Order details",
-  "Antiviruskaspersky":"Kaspersky antivirus 1 PC/1 user",
-  "AntivirusContiue":"Continue"
-
-
+  "shoppingPage.shoppoingLevelText": "SHOPPING LIMIT",
+  "itemDetails.dealPrice": "Deal price",
+  "itemDetails.addToCart": "Add to cart",
+  "itemDetails.feature": "Features:"
 }
