--- a/src/i18n/languages/en.json
+++ b/src/i18n/languages/en.json
@@ -2,6 +2,7 @@
   "common.header": "ROYALITY WALLET",
   "common.confirmBtnText": "CONFIRM",
   "common.continue": "CONTINUE",
+  "common.skip": "SKIP",
 
   "login.siginPageLabel": "Royality Wallet",
   "login.mobileText": "Mobile number",
@@ -9,6 +10,7 @@
   "login.signInLabel": "LOGIN",
   "login.welcomeText": "Welcome to",
   "login.linkText": "Forgot Passwod ?",
+  "login.linkTextRegister": "New Member?",
 
   "signup.fullName": "Full name",
   "signup.gender": "Gender",
@@ -61,7 +63,10 @@
   "rest.newConfirm": "Confirm password",
 
   "otp.pageHeader": "Verification code",
-  "otp.pageSubHeader": "Please type the verification code sent to +91 8892050268",
+  "otp.sendOtpHeader": "Send OTP to Mobile",
+  "otp.pageSubHeader": "Please type the verification code sent to {contact}",
+  "otp.send": "SEND",
+  "otp.sendOtpInfo": "Mobile number {contact}",
   "otp.resendText": "Didn't receive OTP.",
   "otp.resendLinkText": "Resend OTP",
   "otp.verify": " VERIFY",
@@ -77,7 +82,7 @@
   "account.fatherName": "Father name",
   "account.motherName": "Mother name",
   "account.dateofBirth": "Date of Birth(A.D)",
-  "account.dateofBirth1": "Date of Birth(B.S)",
+  "account.dateofBirthBS": "Date of Birth(B.S)",
   "account.gender": "Gender",
   "account.currentAddress": "Current Address",
   "account.permanentAddress": "Permanent Address",
