Bank Transfer api Integration and Back Button

--- a/src/i18n/languages/en.json
+++ b/src/i18n/languages/en.json
@@ -114,6 +114,8 @@
   "account.successText": "SUCCESS",
   "account.accountNoText": "Account created :",
   "account.continue": "CONTINUE",
+  "account.done": "DONE",
+  
 
   "fund.fundpage": "FUND TRANSFER",
   "fund.bankTrasfer": "BANK TRANSFER",
