--- a/src/i18n/languages/en.json
+++ b/src/i18n/languages/en.json
@@ -252,5 +252,10 @@
 
   "cart.pageLabel": "My Cart",
   "cart.total": "Total",
-  "cart.checkout": "CHECKOUT"
+  "cart.checkout": "CHECKOUT",
+  "pos.pageLabel": "Payment option",
+  "pos.confirm":"Confirm",
+  "pos.radioLabel":"Delivery of your order",
+  "pos.accountLabel":"Account number",
+  "pos.accountNumber":"1234567890112"
 }
