added backbutton both loantype and apply page

--- a/src/i18n/languages/en.json
+++ b/src/i18n/languages/en.json
@@ -182,7 +182,7 @@
   "LoanFatherName": "Father name",
   "LoanMobileNumber": "Mobile number",
   "PurposeLoan": "Purpose of loan ",
-  "ApplyPageDiscard": "Dicard",
+  "ApplyPageDiscard": "Discard",
   "ApplyPageApply": "Apply",
 
   "emiCalculator": "EMI Calculator",
