--- a/src/i18n/languages/en.json
+++ b/src/i18n/languages/en.json
@@ -9,13 +9,13 @@
   "login.passwordLabel": "Password",
   "login.signInLabel": "LOGIN",
   "login.welcomeText": "Welcome to",
-  "login.linkText": "Forgot Passwod ?",
+  "login.linkText": "Forgot Password ?",
   "login.linkTextRegister": "New Member?",
 
   "signup.signingPageLabel": "ROYALITY WALLET",
   "signup.fullName": "Full name",
   "signup.gender": "Gender",
-  "signup.mobileNo": "Mobile no",
+  "signup.mobileNo": "Mobile number",
   "signup.passwordLabel": "Password",
   "signup.confirmPassword": "Confirm password",
   "signup.register": "REGISTER",
