shopping page order changes and notification page css changes

--- a/src/i18n/languages/en.json
+++ b/src/i18n/languages/en.json
@@ -261,5 +261,7 @@
   "pos.confirm":"Confirm",
   "pos.radioLabel":"Delivery of your order",
   "pos.accountLabel":"Account number",
-  "pos.accountNumber":"1234567890112"
+  "pos.accountNumber":"1234567890112",
+
+  "shopping.categories": "Categories"
 }
