slider css changes

--- a/src/i18n/languages/en.json
+++ b/src/i18n/languages/en.json
@@ -29,17 +29,17 @@
   "home.shopping": "SHOPPING",
   "home.utility": "UTILITY",
   "home.fashionIconText": "Fashion",
-  "home.televisionText": "Tv Apps",
+  "home.televisionText": "Tv",
   "home.loanText": "LOANS",
   "home.businessLoan": "Business loan",
   "home.puchaseLoan": "Hire-purchase loan",
   "home.termLoan": "Term loan",
   "home.personalLoanText": "Personal loan",
-  "home.storeText": "Electronics store",
-  "home.sparePartText": "Spare parts",
-  "home.motorbike": "Bikes & auto",
+  "home.storeText": "Electronics",
+  "home.sparePartText": "Spare",
+  "home.motorbike": "Bikes",
   "home.grocery": "Groceries",
-  "home.walletText": "Wallet & belts",
+  "home.walletText": "Wallets",
   "home.watchText": "Watches",
   "home.shoesText": "Shoes",
   "home.educationTedxt": "Educational loan",
