--- a/src/i18n/languages/en.json
+++ b/src/i18n/languages/en.json
@@ -71,6 +71,12 @@
   "changePassword.current": "Current password",
   "changePassword.new": "New password",
 
+  "policy.privacy": "Privacy & Confidentiality",
+  "policy.terms": "Terms & Conditions",
+  "policy.refund": "Refund Policy",
+  "policy.return": "Return & Exchange Policy",
+  "policy.confidential": "Privacy policy and Confidentiality",
+
   "otp.pageHeader": "Verification code",
   "otp.sendOtpHeader": "Send OTP to Mobile",
   "otp.pageSubHeader": "Please type the verification code sent to +{countryCode} {contact}",
