privacy and poclicy link changes

--- a/src/i18n/languages/en.json
+++ b/src/i18n/languages/en.json
@@ -178,7 +178,7 @@
   "profile.changeMPIN": "Change MPIN",
   "profile.changePassword": "Change Password",
   "profile.logout": "Logout",
-  "profile.privacy": "Privacy",
+  "profile.privacy": "Privacy & Policy",
   "profile.version": "Version",
 
   "NotificationPage.text": "Notifications",
