mobile,feature issue was fixed

--- a/src/i18n/languages/en.json
+++ b/src/i18n/languages/en.json
@@ -43,6 +43,7 @@
   "home.walletText": "Wallets",
   "home.watchText": "Watches",
   "home.shoesText": "Shoes",
+  "home.kidsText": "Kids",
   "home.educationTedxt": "Educational loan",
   "home.secureText": "Secured loan",
   "home.flightText": "Flight booking",
