categories name changes

--- a/src/i18n/languages/en.json
+++ b/src/i18n/languages/en.json
@@ -30,7 +30,7 @@
   "home.shopping": "SHOPPING",
   "home.utility": "UTILITY",
   "home.fashionIconText": "Fashion",
-  "home.televisionText": "Tv",
+  "home.televisionText": "Appliances",
   "home.loanText": "LOANS",
   "home.businessLoan": "Business loan",
   "home.puchaseLoan": "Hire-purchase loan",
@@ -38,7 +38,7 @@
   "home.personalLoanText": "Personal loan",
   "home.storeText": "Electronics",
   "home.sparePartText": "Spare",
-  "home.motorbike": "Bikes",
+  "home.motorbike": "Automobiles",
   "home.grocery": "Groceries",
   "home.walletText": "Wallets",
   "home.watchText": "Watches",
